# eviroanalyzer-official

./: .gitignore  AGENTS.md  App.tsx  CLAUDE.md  LICENSE  README.md  ROADMAP.md  app.R  constants.ts  index.css  index.html  install_packages.R  install_r.ps1  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  report_template.Rmd  sample_data.csv  server.js  test_stats_data.csv  types.ts  vite.config.ts
.agents/: .skill-lock.json  .skill-lock.json.backup  master-rules.md
.claude/: settings.local.json
components/: CompareMeansPanel.tsx  CorrelationPanel.tsx  Dashboard.tsx  DataEditor.tsx  DataImporter.tsx  DescriptivesPanel.tsx  Forecast.tsx  GISMap.tsx  OutputViewer.tsx  RegressionWizard.tsx  RegulationManager.tsx  SPSSDataView.tsx  SPSSMenuBar.tsx  SPSSOutputViewer.tsx  SPSSPanel.tsx  SPSSVariableList.tsx  Statistics.tsx  StatsContext.tsx  SyntaxLog.tsx  UnifiedDataPanel.tsx  VisualizationPanel.tsx
gan-harness/: generator-state.md
r-shiny-filter/: app.R  install_packages.R
services/: analytics.ts  data-import-service.ts  r-sidecar.ts  regulations.ts  report-export.ts  syntax-logger.ts  (+3 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: anova_oneway.R  chi_square.R  clean_data.R  correlation.R  desc_freq.R  desc_stats.R  forecast_arima.R  forecast_prophet.R  generate_report.R  health_check.R  kriging.R  map_data.R  plot_generator.R  read_data.R  regression_linear.R  regression_logistic.R  syntax_builder.R  ttest_independent.R  ttest_paired.R  write_stats_data.R
src-tauri/src/: lib.rs
(+61 files in other folders)
