[package]
name = "app"
version = "0.1.0"
description = "EnviroAnalyzer Pro - Environmental Compliance Assessment Tool"
authors = ["EnviroAnalyzer Team"]
license = "MIT"
repository = "https://github.com/enviroanalyzer/enviroanalyzer-pro"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2"

[profile.release]
panic = "abort" 
codegen-units = 1
lto = true
opt-level = "s" # Tối ưu cho kích thước
strip = true    # Xóa bỏ debug symbols
